Explicación detallada de la diferencia entre Let y Var.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
 
 </body>
-<script src="/02-Variables.js"></script>
+<!-- <Script src="/01-HolaMundo.js"></Script> -->
+<!-- <Script src="02-Variables.js"></Script> -->
+<script src="/03-LetVar.js"></script>
 </html>
