--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </body>
 <!-- <Script src="/01-HolaMundo.js"></Script> -->
 <!-- <Script src="02-Variables.js"></Script> -->
-<script src="/03-LetVar.js"></script>
+<!-- <script src="/03-LetVar.js"></script> -->
+<script src="/04-Constantes.js"></script>
 </html>
