--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 </body>
 <!-- <Script src="/01-HolaMundo.js"></Script> -->
-<!-- <Script src="02-Variables.js"></Script> -->
+<!-- <Script src="/02-Variables.js"></Script> -->
 <!-- <script src="/03-LetVar.js"></script> -->
-<script src="/04-Constantes.js"></script>
+<!-- <script src="/04-Constantes.js"></script> -->
+<script src="/05-TiposDeDatosYOperadores.js"></script>
 </html>
