He aprendido por completo el uso de condicional if, uso de operadores relacionales y operadores lógicos de JavaScript

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <!-- <Script src="/02-Variables.js"></Script> -->
 <!-- <script src="/03-LetVar.js"></script> -->
 <!-- <script src="/04-Constantes.js"></script> -->
-<script src="/05-TiposDeDatosYOperadores.js"></script>
+<!--  <script src="/05-TiposDeDatosYOperadores.js"></script> -->
+<script src="/06-Condicionales.js"></script>
 </html>
