He aprendido y dominado el uso de Switch en JavaScript

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <!-- <script src="/03-LetVar.js"></script> -->
 <!-- <script src="/04-Constantes.js"></script> -->
 <!--  <script src="/05-TiposDeDatosYOperadores.js"></script> -->
-<script src="/06-Condicionales.js"></script>
+<!-- <script src="/06-Condicionales.js"></script> -->
+<script src="/07-switch.js"></script>
 </html>
