--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <!-- <script src="/04-Constantes.js"></script> -->
 <!--  <script src="/05-TiposDeDatosYOperadores.js"></script> -->
 <!-- <script src="/06-Condicionales.js"></script> -->
-<script src="/07-switch.js"></script>
+<!-- <script src="/07-switch.js"></script> -->
+<script src="/08-BucleFor.js"></script>
 </html>
