He aprendido el uso de un While, ejecuta siempre uy cuando se de dicha condición.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <!--  <script src="/05-TiposDeDatosYOperadores.js"></script> -->
 <!-- <script src="/06-Condicionales.js"></script> -->
 <!-- <script src="/07-switch.js"></script> -->
-<script src="/08-BucleFor.js"></script>
+<!-- <!-- <script src="/08-BucleFor.js"></script> --> -->
+<script src="/09-BucleWhile.js"></script>
 </html>
