Aprendí el manejo del do While y en qué casos debe ser usado, y apliqué break en un bucle while

--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@
 <!-- <script src="/07-switch.js"></script> -->
 <!-- <!-- <script src="/08-BucleFor.js"></script> --> -->
 <script src="/09-BucleWhile.js"></script>
+<!-- <script src="/10-DoWhile.js"></script> -->
 </html>
