--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <!--  <script src="/05-TiposDeDatosYOperadores.js"></script> -->
 <!-- <script src="/06-Condicionales.js"></script> -->
 <!-- <script src="/07-switch.js"></script> -->
-<!-- <!-- <script src="/08-BucleFor.js"></script> --> -->
-<script src="/09-BucleWhile.js"></script>
+<!--  <script src="/08-BucleFor.js"></script> -->
+<!-- <script src="/09-BucleWhile.js"></script> -->
 <!-- <script src="/10-DoWhile.js"></script> -->
+<script src="/11-Ventanas.js"></script>
 </html>
