--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <!--  <script src="/08-BucleFor.js"></script> -->
 <!-- <script src="/09-BucleWhile.js"></script> -->
 <!-- <script src="/10-DoWhile.js"></script> -->
-<script src="/11-Ventanas.js"></script>
+<!-- <script src="/11-Ventanas.js"></script> -->
+<script src="/12-Ejercicio1.js"></script>
 </html>
