He resuelto el ejercicio 2 con ayuda de condicionales y do while

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <!-- <script src="/09-BucleWhile.js"></script> -->
 <!-- <script src="/10-DoWhile.js"></script> -->
 <!-- <script src="/11-Ventanas.js"></script> -->
-<script src="/12-Ejercicio1.js"></script>
+<!-- <script src="/12-Ejercicio1.js"></script> -->
+<script src="/13-Ejercicio2.js"></script>
 </html>
