He realizado este ejercicio donde ejecuto el bucle for, condicionales if y do while

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <!-- <script src="/10-DoWhile.js"></script> -->
 <!-- <script src="/11-Ventanas.js"></script> -->
 <!-- <script src="/12-Ejercicio1.js"></script> -->
-<script src="/13-Ejercicio2.js"></script>
+<!-- <script src="/13-Ejercicio2.js"></script> -->
+<script src="/14-Ejercicio3.js"></script>
 </html>
