--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 <!-- <script src="/13-Ejercicio2.js"></script> -->
 <!-- <script src="/14-Ejercicio3.js"></script> -->
 <!-- <script src="/15-Ejercicio4.js"></script> -->
-<script src="/17-Ejercicio6.js"></script>
+<!-- <script src="/17-Ejercicio6.js"></script> -->
+<script src="/18-Ejercicio7.js"></script>
 </html>
