--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        * {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Miguel Learning JavaScript</title>
 </head>
 <body>
 
@@ -25,5 +30,6 @@
 <!-- <script src="/14-Ejercicio3.js"></script> -->
 <!-- <script src="/15-Ejercicio4.js"></script> -->
 <!-- <script src="/17-Ejercicio6.js"></script> -->
-<script src="/18-Ejercicio7.js"></script>
+<!-- <script src="/18-Ejercicio7.js"></script> -->
+<script src="/19-Ejercicio8.js"></script>
 </html>
