He aprendido el uso de las funciones, código reutilizable.

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 <!-- <script src="/15-Ejercicio4.js"></script> -->
 <!-- <script src="/17-Ejercicio6.js"></script> -->
 <!-- <script src="/18-Ejercicio7.js"></script> -->
-<script src="/19-Ejercicio8.js"></script>
+<!-- <script src="/19-Ejercicio8.js"></script> -->
+<script src="/20-Funciones.js"></script>
 </html>
