--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
 <!-- <script src="/19-Ejercicio8.js"></script> -->
 <!-- <script src="/20-Funciones.js"></script> -->
 <!-- <script src="/21-Parametros2.js"></script> -->
-<script src="/22-FuncionesAnonimas.js"></script>
+<!-- <script src="/22-FuncionesAnonimas.js"></script> -->
+<script src="/23-Ambito.js"></script>
 </html>
