--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 <!-- <script src="/20-Funciones.js"></script> -->
 <!-- <script src="/21-Parametros2.js"></script> -->
 <!-- <script src="/22-FuncionesAnonimas.js"></script> -->
-<script src="/23-Ambito.js"></script>
+<!-- <script src="/23-Ambito.js"></script> -->
+<script src="/24-FuncionesTexto.js"></script>
 </html>
