--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 <!-- <script src="/21-Parametros2.js"></script> -->
 <!-- <script src="/22-FuncionesAnonimas.js"></script> -->
 <!-- <script src="/23-Ambito.js"></script> -->
-<script src="/24-FuncionesTexto.js"></script>
+<!-- <script src="/24-FuncionesTexto.js"></script> -->
+<script src="/25-Plantillas.js"></script>
 </html>
