He aprendido el uso de los parámetros rest y spread en las funciones

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 <!-- <script src="/17-Ejercicio6.js"></script> -->
 <!-- <script src="/18-Ejercicio7.js"></script> -->
 <!-- <script src="/19-Ejercicio8.js"></script> -->
-<script src="/20-Funciones.js"></script>
+<!-- <script src="/20-Funciones.js"></script> -->
+<script src="/21-Parametros2.js"></script>
 </html>
