He aprendido el uso de callbacks, funciones anónimas y funciones de flecha

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
 <!-- <script src="/18-Ejercicio7.js"></script> -->
 <!-- <script src="/19-Ejercicio8.js"></script> -->
 <!-- <script src="/20-Funciones.js"></script> -->
-<script src="/21-Parametros2.js"></script>
+<!-- <script src="/21-Parametros2.js"></script> -->
+<script src="/22-FuncionesAnonimas.js"></script>
 </html>
