He aprendido la estructura, uso de un array y como recorrerlo.

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
 <!-- <script src="/22-FuncionesAnonimas.js"></script> -->
 <!-- <script src="/23-Ambito.js"></script> -->
 <!-- <script src="/24-FuncionesTexto.js"></script> -->
-<script src="/25-Plantillas.js"></script>
+<!-- <script src="/25-Plantillas.js"></script> -->
+<script src="/26-Arrays.js"></script>
 </html>
