He aprendido el uso de los arrays, sus funciones, como buscar, métodos que puedo usar, etc

--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
 <!-- <script src="/23-Ambito.js"></script> -->
 <!-- <script src="/24-FuncionesTexto.js"></script> -->
 <!-- <script src="/25-Plantillas.js"></script> -->
-<script src="/26-Arrays.js"></script>
+<!-- <script src="/26-Arrays.js"></script> -->
+<!-- <script src="/27-ArraysMultli.js"></script> -->
+<script src="/28-EjercicioArrays.js"></script>
 </html>
