He aprendido el uso del Document Object Model

--- a/index.html
+++ b/index.html
@@ -12,33 +12,53 @@
     <title>Miguel Learning JavaScript</title>
 </head>
 <body>
+    <center>
+        <h1>Título de la página</h1>
+        <p>Descripción de la página</p>
+        <section id="miSeccion">
+            <hr>
+        </section>
+    </center>
+    <div id="caja">
+        ¡HOLA!, soy una caja.
+    </div>
 
+    <div>
+        ¡1!, soy el primero
+    </div>
+    <div>
+        ¡2!, soy el segundo
+    </div>
+    <div>
+        ¡3!, soy el tercero
+    </div>
+    <!-- <Script src="/01-HolaMundo.js"></Script> -->
+    <!-- <Script src="/02-Variables.js"></Script> -->
+    <!-- <script src="/03-LetVar.js"></script> -->
+    <!-- <script src="/04-Constantes.js"></script> -->
+    <!--  <script src="/05-TiposDeDatosYOperadores.js"></script> -->
+    <!-- <script src="/06-Condicionales.js"></script> -->
+    <!-- <script src="/07-switch.js"></script> -->
+    <!--  <script src="/08-BucleFor.js"></script> -->
+    <!-- <script src="/09-BucleWhile.js"></script> -->
+    <!-- <script src="/10-DoWhile.js"></script> -->
+    <!-- <script src="/11-Ventanas.js"></script> -->
+    <!-- <script src="/12-Ejercicio1.js"></script> -->
+    <!-- <script src="/13-Ejercicio2.js"></script> -->
+    <!-- <script src="/14-Ejercicio3.js"></script> -->
+    <!-- <script src="/15-Ejercicio4.js"></script> -->
+    <!-- <script src="/17-Ejercicio6.js"></script> -->
+    <!-- <script src="/18-Ejercicio7.js"></script> -->
+    <!-- <script src="/19-Ejercicio8.js"></script> -->
+    <!-- <script src="/20-Funciones.js"></script> -->
+    <!-- <script src="/21-Parametros2.js"></script> -->
+    <!-- <script src="/22-FuncionesAnonimas.js"></script> -->
+    <!-- <script src="/23-Ambito.js"></script> -->
+    <!-- <script src="/24-FuncionesTexto.js"></script> -->
+    <!-- <script src="/25-Plantillas.js"></script> -->
+    <!-- <script src="/26-Arrays.js"></script> -->
+    <!-- <script src="/27-ArraysMultli.js"></script> -->
+    <!-- <script src="/28-EjercicioArrays.js"></script> -->
+    <script src="/29-DOM.js"></script>
 </body>
-<!-- <Script src="/01-HolaMundo.js"></Script> -->
-<!-- <Script src="/02-Variables.js"></Script> -->
-<!-- <script src="/03-LetVar.js"></script> -->
-<!-- <script src="/04-Constantes.js"></script> -->
-<!--  <script src="/05-TiposDeDatosYOperadores.js"></script> -->
-<!-- <script src="/06-Condicionales.js"></script> -->
-<!-- <script src="/07-switch.js"></script> -->
-<!--  <script src="/08-BucleFor.js"></script> -->
-<!-- <script src="/09-BucleWhile.js"></script> -->
-<!-- <script src="/10-DoWhile.js"></script> -->
-<!-- <script src="/11-Ventanas.js"></script> -->
-<!-- <script src="/12-Ejercicio1.js"></script> -->
-<!-- <script src="/13-Ejercicio2.js"></script> -->
-<!-- <script src="/14-Ejercicio3.js"></script> -->
-<!-- <script src="/15-Ejercicio4.js"></script> -->
-<!-- <script src="/17-Ejercicio6.js"></script> -->
-<!-- <script src="/18-Ejercicio7.js"></script> -->
-<!-- <script src="/19-Ejercicio8.js"></script> -->
-<!-- <script src="/20-Funciones.js"></script> -->
-<!-- <script src="/21-Parametros2.js"></script> -->
-<!-- <script src="/22-FuncionesAnonimas.js"></script> -->
-<!-- <script src="/23-Ambito.js"></script> -->
-<!-- <script src="/24-FuncionesTexto.js"></script> -->
-<!-- <script src="/25-Plantillas.js"></script> -->
-<!-- <script src="/26-Arrays.js"></script> -->
-<!-- <script src="/27-ArraysMultli.js"></script> -->
-<script src="/28-EjercicioArrays.js"></script>
 </html>
